# cheshirecat-core-

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  compose.yml
core/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
core/cat/: bill_the_lizard.py  enums.py  env.py  exceptions.py  jobs.py  log.py  main.py  rabbit_hole.py  startup.py  utils.py
core/cat/adapters/: factory_adapter.py  plugin_transfer_adapter.py
core/cat/agents/: __init__.py  base_agent.py  form_agent.py  main_agent.py  memory_agent.py  procedures_agent.py
core/cat/auth/: auth_utils.py  connection.py  permissions.py
core/cat/convo/: llm.py  messages.py
core/cat/db/: crud.py  crud_source.py  crud_users.py  database.py  database_source.py  models.py  redis_source.py  vector_database.py
core/cat/db/cruds/: history.py  plugins.py  settings.py  users.py
core/cat/experimental/form/: cat_form.py  form_decorator.py
core/cat/factory/: adapter.py  auth_handler.py  base_factory.py  crud_source.py  custom_auth_handler.py  custom_embedder.py  custom_file_manager.py  custom_filemanager.py  custom_llm.py  custom_uploader.py  embedder.py  file_manager.py  llm.py  plugin_filemanager.py  plugin_uploader.py  uploader.py
core/cat/jobs/: job_on_idle_strays.py
core/cat/looking_glass/: bill_the_lizard.py  callbacks.py  cheshire_cat.py  cheshire_cat_manager.py  output_parser.py  stray_cat.py  white_rabbit.py
core/cat/mad_hatter/: humpty_dumpty.py  mad_hatter.py  march_hare.py  plugin.py  plugin_extractor.py  registry.py  tweedledee.py  tweedledum.py  utils.py
core/cat/mad_hatter/core_plugin/: plugin_events.py
core/cat/mad_hatter/core_plugin/hooks/: agent.py  crud_source.py  factory.py  flow.py  prompt.py  rabbithole.py
core/cat/mad_hatter/decorators/: hook.py  tool.py
core/cat/memory/: long_term_memory.py  models.py  utils.py  vector_memory.py  vector_memory_builder.py  vector_memory_collection.py  working_memory.py
core/cat/routes/: admins.py  admins_router.py  auth.py  auth_handler.py  auth_utils.py  base.py  crud_source.py  embedder.py  file_manager.py  llm.py  memory.py  memory_router.py  openapi.py  plugin_filemanager.py  plugin_uploader.py  plugins.py  rabbit_hole.py  routes_utils.py  settings.py  static.py  upload.py  users.py  websocket.py
core/cat/routes/admins/: auth.py  crud.py  plugins.py  utilities.py
core/cat/routes/memory/: collections.py  convo_history.py  points.py
core/cat/routes/models/: auth.py  memory.py  upload.py  users.py
core/cat/routes/static/: admin.py
core/cat/routes/static/core_static_folder/auth/: login.html
core/tests/: conftest.py  test_cat_utils.py  test_cruds.py  test_env_variables.py  utils.py
core/tests/agents/: test_agent_form.py  test_agent_memory.py  test_agent_tools.py  test_main_agent.py  test_output_parser.py
core/tests/jobs/: test_job_on_idle_strays.py
core/tests/looking_glass/: test_bill_the_lizard.py  test_cheshire_cat.py  test_stray_cat.py
core/tests/mad_hatter/: test_hooks.py  test_mad_hatter.py  test_march_hare.py  test_plugin.py  test_plugin_extractor.py  test_tweedledee.py  test_tweedledum.py
core/tests/mocks/mock_plugin/: mock_form.py  mock_llm.py
core/tests/mocks/mock_plugin_fast_reply/: mock_hook.py
core/tests/routes/: test_routes_base.py  test_session.py  test_websocket.py
core/tests/routes/admins/: test_admins_crud.py  test_admins_jwt.py  test_admins_permissions.py  test_admins_plugin_settings.py  test_admins_plugins_info.py  test_admins_plugins_install_uninstall.py  test_admins_plugins_registry.py  test_admins_utilities.py
core/tests/routes/auth/: test_auth_setting.py  test_available_permissions.py  test_env_api_key.py  test_jwt.py
core/tests/routes/embedder/: test_embedder_setting.py
core/tests/routes/file_manager/: test_file_manager_setting.py
core/tests/routes/llm/: test_llm_setting.py
core/tests/routes/memory/: test_memory_by_user.py  test_memory_collection.py  test_memory_points.py  test_memory_recall.py  test_working_memory.py
core/tests/routes/plugin_filemanager/: test_plugin_filemanager_setting.py
core/tests/routes/plugin_uploader/: test_plugin_uploader_setting.py
core/tests/routes/plugins/: test_plugin_settings.py  test_plugin_toggle.py  test_plugins_info.py  test_plugins_install_uninstall.py  test_plugins_registry.py
core/tests/routes/rabbithole/: test_upload_docs.py  test_upload_memories.py  test_upload_url.py
core/tests/routes/static/: test_static.py
core/tests/routes/users/: test_users_crud.py  test_users_permissions.py
