[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "1.8.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Matteo Cacciola" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
    "fastapi==0.115.3",
    "scalar-fastapi==1.0.3",
    "websockets==13.1",
    "PyJWT==2.9.0",
    "bcrypt==4.2.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "qdrant_client==1.12.0",
    "langchain==0.3.4",
    "langchain-community==0.3.3",
    "langchain-openai==0.2.3",
    "langchain-google-genai==2.0.1",
    "langchain-cohere==0.3.1",
    "huggingface-hub==0.26.1",
    "beautifulsoup4==4.12.3",
    "pdfminer.six==20240706",
    "unstructured==0.16.0",
    "tiktoken==0.8.0",
    "tomli",
    "loguru==0.7.2",
    "anthropic==0.36.2",
    "text_generation==0.7.0",
    "python-slugify==8.0.4",
    "autopep8",
    "pylint",
    "perflint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fastembed==0.4.1",
    "rapidfuzz==3.10.0",
    "APScheduler==3.10.4",
    "ruff==0.7.0",
    "redis==5.1.1",
    "aiofiles==24.1.0",
]

[tool.coverage.run]
source = ["cat"]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E1120",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"
