[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "1.8.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Matteo Cacciola" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "aiofiles==24.1.0",
    "anthropic==0.36.2",
    "APScheduler==3.10.4",
    "autopep8",
    "azure-storage-blob==12.23.1",
    "bcrypt==4.2.0",
    "beautifulsoup4==4.12.3",
    "boto3==1.35.49",
    "fastapi==0.115.3",
    "fastembed==0.4.1",
    "google-cloud-storage==2.18.2",
    "gunicorn==23.0.0",
    "httpx",
    "huggingface-hub==0.26.1",
    "langchain==0.3.4",
    "langchain-cohere==0.3.1",
    "langchain-community==0.3.3",
    "langchain-google-genai==2.0.1",
    "langchain-openai==0.2.3",
    "loguru==0.7.2",
    "pandas==2.2.3",
    "pdfminer.six==20240706",
    "perflint",
    "pydantic==2.9.2",
    "PyJWT==2.9.0",
    "pylint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "python-multipart==0.0.12",
    "python-slugify==8.0.4",
    "qdrant_client==1.12.0",
    "rapidfuzz==3.10.0",
    "redis==5.1.1",
    "ruff==0.7.0",
    "scalar-fastapi==1.0.3",
    "scikit-learn==1.5.2",
    "text_generation==0.7.0",
    "tiktoken==0.8.0",
    "tomli",
    "unstructured==0.16.0",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
]

[tool.coverage.run]
source = ["cat"]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E1120",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"
